--- a/mqtt/mosquitto/mosquitto.conf
+++ b/mqtt/mosquitto/mosquitto.conf
@@ -148,7 +148,7 @@ listener 1883
 # Websockets support is currently disabled by default at compile time.
 # Certificate based TLS may be used with websockets, except that
 # only the cafile, certfile, keyfile and ciphers options are supported.
-#protocol mqtt
+protocol websockets
 
 # When a listener is using the websockets protocol, it is possible to serve
 # http data as well. Set http_dir to a directory which contains the files you
@@ -292,7 +292,7 @@ listener 1883
 # This can be either mqtt or websockets.
 # Certificate based TLS may be used with websockets, except that only the
 # cafile, certfile, keyfile and ciphers options are supported.
-#protocol mqtt
+protocol websockets
 
 # When a listener is using the websockets protocol, it is possible to serve
 # http data as well. Set http_dir to a directory which contains the files you
@@ -483,7 +483,7 @@ listener 1883
 # libwebsockets as a bit mask for its lws_log_levels enum. See the
 # libwebsockets documentation for more details. "log_type websockets" must also
 # be enabled.
-#websockets_log_level 0
+websockets_log_level 0
 
 # If set to true, client connection and disconnection messages will be included
 # in the log.
