--- a/mqtt/mosquitto/mosquitto.conf
+++ b/mqtt/mosquitto/mosquitto.conf
@@ -148,7 +148,7 @@ listener 1883
 # Websockets support is currently disabled by default at compile time.
 # Certificate based TLS may be used with websockets, except that
 # only the cafile, certfile, keyfile and ciphers options are supported.
-protocol websockets
+protocol mqtt
 
 # When a listener is using the websockets protocol, it is possible to serve
 # http data as well. Set http_dir to a directory which contains the files you
@@ -272,7 +272,7 @@ protocol websockets
 # address and so restrict access to the associated network and 
 # interface. By default, mosquitto will listen on all interfaces.
 # listener port-number [ip address/host name]
-#listener
+listener 8080
 
 # The maximum number of client connections to allow. This is 
 # a per listener setting.
