WIP minified version on CS7

--- a/mqtt/cs7/Dockerfile
+++ b/mqtt/cs7/Dockerfile
@@ -1,5 +1,5 @@
 FROM gcc:4.9
 COPY . /app
 WORKDIR /app/
-RUN gcc -o app stream_control.c
+RUN gcc ui_control.c -o app --std=gnu99 -O0
 CMD ["./app"]
