--- a/platform/Dockerfile
+++ b/platform/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /
 
 # Replace <jar-file-name> with the name of the oupt jar found in the target dir
 # to geneate the jar file compile the project first with lein uberjar
-COPY target/<jar-file-name> <jar-file-name>
+COPY target/platform.jar platform.jar
 EXPOSE 3000
 
-CMD java -jar <jar-file-name>
+CMD java -jar platform.jar
