--- a/platform/docker-compose.yml
+++ b/platform/docker-compose.yml
@@ -1,18 +1,20 @@
 version: '3'
 services:
-    postgres:
-        image: postgres
-        volumes:
-          - .docker/postgresql:/var/lib/postgresql/data
-          - ./scripts/postgres:/docker-entrypoint-initdb.d
-        ports:
-          - '5432:5432'
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-    redis:
-      image: redis:alpine
-      ports:
-        - '6379:6379'
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment: 
+      DB_HOST: postgres
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+  postgres:
+      image: postgres
       volumes:
-        - .docker/redis/data:/data
+        - .docker/postgresql:/var/lib/postgresql/data
+        - ./scripts/postgres:/docker-entrypoint-initdb.d
+      ports:
+        - '5432:5432'
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
