Changed default password

--- a/platform/docker-compose.yml
+++ b/platform/docker-compose.yml
@@ -16,5 +16,6 @@ services:
       ports:
         - '5432:5432'
       environment:
+        POSTGRES_DB: songpark
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
