--- a/mqtt/docker-compose.yml
+++ b/mqtt/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     ports:
       - '5432:5432'
     environment:
+      POSTGRES_DB: songpark
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
 
