--- a/platform/Dockerfile
+++ b/platform/Dockerfile
@@ -1,10 +1,6 @@
-FROM openjdk:8u181-alpine3.8
-
-WORKDIR /
-
-# Replace <jar-file-name> with the name of the oupt jar found in the target dir
-# to geneate the jar file compile the project first with lein uberjar
-COPY target/platform.jar platform.jar
-EXPOSE 3000
-
-CMD java -jar platform.jar
+FROM openjdk:11 AS songpark-platform
+RUN mkdir /app
+WORKDIR /app
+COPY VERSION.git /app
+COPY target/platform.jar /app
+CMD java -server -jar platform.jar
