--- a/platform/deploy/songpark-platform.yaml
+++ b/platform/deploy/songpark-platform.yaml
@@ -48,6 +48,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: songpark-platform
+  namespace: internal
 spec:
   ports:
   - port: 80
@@ -61,6 +62,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: songpark-platform
+  namespace: internal
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.k8s.io/issuer: "letsencrypt-prod"
