--- a/platform/deploy/songpark-platform.yaml
+++ b/platform/deploy/songpark-platform.yaml
@@ -64,6 +64,8 @@ metadata:
   name: songpark-platform
   namespace: internal
   annotations:
+    nginx.ingress.kubernetes.io/auth-type: "basic"
+    nginx.ingress.kubernetes.io/auth-secret: "songpark-platform-basic-auth"
     kubernetes.io/ingress.class: "nginx"
     cert-manager.k8s.io/issuer: "letsencrypt-prod"
     kubernetes.io/tls-acme: "true"
