Slightly improved with variables.

--- a/platform/deploy/Makefile
+++ b/platform/deploy/Makefile
@@ -1,20 +1,22 @@
+NAME:=songpark-platform
+TAG:=latest
+
 all: build push
 
 aws-pw: 
 	aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 523581807964.dkr.ecr.eu-central-1.amazonaws.com
 
 build:
-	docker build -t songpark-platform:latest ../.
+	docker build -t ${NAME}:${TAG} ../.
 
 tag: build aws-pw
-	docker tag songpark-platform:latest 523581807964.dkr.ecr.eu-central-1.amazonaws.com/songpark-platform:latest
+	docker tag ${NAME}:${TAG} 523581807964.dkr.ecr.eu-central-1.amazonaws.com/${NAME}:${TAG}
 
 push: tag
-	docker push 523581807964.dkr.ecr.eu-central-1.amazonaws.com/songpark-platform:latest
+	docker push 523581807964.dkr.ecr.eu-central-1.amazonaws.com/${NAME}:${TAG}
 
 remove:
-	kubectl delete -f songpark-platform.yaml
+	kubectl delete -f ${NAME}.yaml
 
 deploy: tag
-	kubectl apply -f songpark-platform.yaml
-
+	kubectl apply -f ${NAME}.yaml
