Temporarily comment out apt-get update
For whatever reason this fails on Emil's mac. Need to get something
out, so this was commented out. A proper look to be done later.

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -12,6 +12,6 @@ RUN apt-get update
 RUN apt-get install -y ca-certificates gnupg2
 RUN apt-key add inonit-signing-public.key
 RUN echo "deb https://nexus.inonit.no/repository/songpark-apt/ stable main" >> /etc/apt/sources.list.d/songpark.list
-RUN apt-get update
+#RUN apt-get update
 
 CMD java -server -jar platform.jar
