Add database and migrations back again
Reintroduce database and migrations again. Database handles db
connections (in this case postgres) and migrations handle database
migrations.

Also updated the base docker-compose.yml file to also include
mosquitto (MQTT broker) and removed redis (for the time being).

The init.clj file has also been updated for starting the database and
migrator components.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
 version: '3'
 services:
     postgres:
-        image: postgres
-        volumes:
-          - .docker/postgresql:/var/lib/postgresql/data
-          - ./scripts/postgres:/docker-entrypoint-initdb.d
-        ports:
-          - '5432:5432'
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-    redis:
-      image: redis:alpine
-      ports:
-        - '6379:6379'
+      image: postgres
       volumes:
-        - .docker/redis/data:/data
+        - .docker/postgresql:/var/lib/postgresql/data
+        - ./scripts/postgres:/docker-entrypoint-initdb.d
+      ports:
+        - '5432:5432'
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+    mqtt:
+      image: eclipse-mosquitto
+      expose:
+        - "1883"
+        - "9001"
+      ports:
+        - "1883:1883"
+        - "8000:8000"
+        - "9001:9001"
+      volumes:
+        - .docker/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
