Add authn/authz to routes
The REST APIs under /api now needs authentication. No authz has yet
been added.

Added redis for session handling, and updated the server to initialize
with a redis store, a authn/z backend and the postgres database.

In addition, changed the api endpoints for auth to use the postgres
database, instead of the in-memory db for the jam handling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,9 @@ services:
         - "9001:9001"
       volumes:
         - .docker/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+    redis:
+      image: redis:alpine
+      ports:
+        - '6379:6379'
+      volumes:
+        - .docker/redis/data:/data
