--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
     postgres:
-      image: postgres
+      image: postgres:10
       volumes:
         - .docker/postgresql:/var/lib/postgresql/data
         - ./scripts/postgres:/docker-entrypoint-initdb.d
       ports:
-        - '5432:5432'
+        - '15432:5432'
       environment:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
